<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:id="@id/TableLayout01"
        android:paddingBottom="15dp"
        android:clickable="false"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:overScrollMode="always">

    <ScrollView
            android:id="@id/scrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

        <TableLayout
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TableRow
                    android:id="@id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/woladvice"/>

                <TextView
                        android:id="@id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.0dp"
                        android:text="@string/shutdownadvice"/>

                <TextView
                        android:id="@id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.0dp"
                        android:text="@string/donate"/>

                <TextView
                        android:textSize="12sp"
                        android:id="@id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.0dp"
                        android:text="@string/reference"/>

                <TextView
                        android:textAppearance="?android:textAppearanceLarge"
                        android:id="@id/textView10"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.0dp"
                        android:text="@string/configuration"/>
            </LinearLayout>

            <TableRow
                    android:id="@id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_gravity="center|start"
                        android:id="@id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_address"/>

                <EditText
                        android:inputType="" android:textSize="12sp"
                        android:layout_gravity="fill_horizontal"
                        android:id="@id/txtIP"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ip_example"
                        android:ems="10"
                        android:width="200dp"
                        android:digits="1234567890."/>
            </TableRow>

            <TableRow
                    android:id="@id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_gravity="center|start"
                        android:id="@id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mac_address"/>

                <EditText
                        android:textSize="12sp"
                        android:id="@id/txtMAC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/mac_example"
                        android:ems="10"
                        android:width="200dp"
                        android:inputType="textCapCharacters">

                    <requestFocus/>
                </EditText>
            </TableRow>

            <TableRow
                    android:id="@id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_gravity="center|start"
                        android:id="@id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/admin_username"/>

                <EditText
                        android:inputType="" android:textSize="12sp"
                        android:id="@id/txtUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/admin"
                        android:ems="10"
                        android:width="200dp"/>
            </TableRow>

            <TableRow
                    android:id="@id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_gravity="center|start"
                        android:id="@id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"/>

                <EditText
                        android:textSize="12sp"
                        android:id="@id/txtPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/pass_hint"
                        android:ems="10"
                        android:width="200dp"
                        android:inputType="textPassword"/>
            </TableRow>

            <TableRow
                    android:id="@id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_gravity="center|start"
                        android:id="@id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/domain"/>

                <EditText
                        android:inputType="" android:textSize="12sp"
                        android:id="@id/txtDomain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/domain_hint"
                        android:ems="10"
                        android:width="200dp"/>
            </TableRow>

            <TableRow
                    android:id="@id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@id/configSaveButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save_config"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</TableLayout>